# Python_poetry_docker

./: Dockerfile  pyproject.toml
