[tool.poetry]
name = "finalproject-1"
version = "0.1.0"
description = ""
authors = ["Maria-hub746 <113303447+Maria-hub746@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
datetime = "^4.7"
black = "^22.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
